--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pool_ionic_1",
+  "name": "app_pool",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
